sample-rest-service.yml
kind: Service
apiVersion: v1
metadata:
  name: sample-rest-service
  labels:
    app: sample-rest-application
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: sample-rest-application
