sample-rest-route-secured.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-rest-secured
  labels:
    app: sample-rest-application
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: sample-rest-service
  port:
    targetPort: 8080
  tls:
    termination: edge
