sample-rest-route-unsecured.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-rest-unsecured
  labels:
    app: sample-rest-application
spec:
  to:
    kind: Service
    name: sample-rest-service
  port:
    targetPort: 8080
